--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/RestaurantMenuCalculator
 endorsed.classpath=
 excludes=
+file.reference.flatlaf-3.0.jar=src/media/flatlaf-3.0.jar
+file.reference.flatlaf-intellij-themes-3.0.jar=src/media/flatlaf-intellij-themes-3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.0.jar}:\
+    ${file.reference.flatlaf-intellij-themes-3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
